--- a/style.css
+++ b/style.css
@@ -59,8 +59,12 @@ div#leftside {
 }
 
 svg#timeline {
-    background-color: white;
     width: 100%
+}
+
+rect.barback {
+    fill: white;
+    opacity: 0;
 }
 
 .col-1 {
