--- a/style.css
+++ b/style.css
@@ -33,13 +33,14 @@ circle {
     text-decoration: none;
     color: #d9cfc5;
     transform: rotate(-90deg);
-    position: absolute;
+    position: fixed;
 }
 
 #cpright {
     transform-origin: bottom left;
     bottom: 10px;
     left: 20px;
+    position: fixed;
 }
 
 #climb {
@@ -64,13 +65,13 @@ circle {
 }
 
 .rockwall {
-    background-image: url("images/empty_composite_bitmap.png");
+    background-image: url("images/corrected_composite.png");
     background-size: 100%;
     position: relative;
     float: right;
     top: 0;
     z-index: 0;
-    border: 1px solid #262625;
+    border-left: 1px solid #262625;
 }
 
 svg#limblines {
@@ -110,6 +111,12 @@ div#leftside {
     grid-gap: 0;
     grid-template-columns: 30px calc(50% - 15px) calc(50% - 15px);
     grid-template-rows: 30px auto;
+}
+
+div#about {
+    display: grid;
+    grid-gap: 0;
+    grid-template-columns: 30px auto;
 }
 
 svg#timeline {
@@ -258,10 +265,55 @@ g.bar_group {
     opacity: 0.3;
 }
 
-#textcontainer > p {
-    background-color: #262625;
-    color: #d9cfc5;
+#textcontainer {
     font-size: 9px;
     text-align: right;
+    margin-right: 9px;
+    position: relative;
+    z-index: 100;
+}
+
+#textcontainer > p {
+    display: inline-block;
+    background-color: #262625;
+    color: #d9cfc5;
     text-transform: uppercase;
+    padding: 2px 6px;
+    margin: 4px 0;
+}
+
+#textcontainer > p#btn {
+    background-color: #d9cfc5;
+    color: #262625;
+    cursor: pointer;
+}
+
+div#text {
+    margin: 50px auto;
+    width: 50%;
+    max-width: 800px;
+    min-width: 600px;
+    text-align: left;
+}
+
+div#text > img {
+    margin-top: 12px;
+    width: 100%;
+}
+
+div#text > p {
+    font-size: 11px;
+    line-height: 24px;
+    margin: 24px 0 12px 0;
+    text-align: left;
+}
+
+div#text > p > b, div#text > label {
+    text-align: left;
+    text-transform: uppercase;
+    font-size: 9px;
+}
+
+div#text > p > a {
+    color: #262625;
 }
