--- a/mobile.css
+++ b/mobile.css
@@ -71,5 +71,62 @@
       cursor: pointer;
   }
 
+  #about {
+      display: block !important;
+      width: 100vw;
+  }
+
+  #about > #text {
+      width: 90%;
+      min-width: 0;
+      margin: 64px 16px 0 16px;
+  }
+
+  #hamburger {
+      position: fixed;
+      top: 0;
+      left: 0;
+      width: 100vw;
+      height: 100vh;
+  }
+
+  #hamburger > img {
+      position: absolute;
+      top: 20px;
+      left: 20px;
+      width: 20px;
+      height: 20px;
+      z-index: 100;
+      cursor: pointer;
+  }
+
+  #hamburger > p {
+      display: none;
+      position: absolute;
+      top: 48px;
+      left: 20px;
+      padding: 12px 16px;
+      width: 160px;
+      z-index: 100;
+      color: #d9cfc5;
+      background-color: #262625;
+      font-size: 12px;
+      line-height: 24px;
+  }
+
+  #hamburger > p > a {
+      color: #d9cfc5;
+      text-decoration: none;
+  }
+
+  #hamburgerBun {
+      width: 100vw;
+      height: 100vh;
+      position: absolute;
+      top: 0;
+      left: 0;
+      z-index: 90;
+  }
+
 
 }
